Add links to list so they stack properly. Add spicy_italian_salad.html

--- a/spicy_italian_salad.html
+++ b/spicy_italian_salad.html
@@ -4,15 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Recipes Homepage</title>
+    <title>Spicy Italian Salad</title>
 </head>
 <body>
 
-    <h1>Odin Recipes</h1>
-    <ul>
-        <li><a href="./pizza.html">Pepperoni Pizza</a></li>
-        <li><a href="./spicy_italian_salad.html">Spicy Italian Salad</a></li>
-    </ul>
+    <h1>Spicy Italian Salad</h1>
     
 </body>
 </html>
