--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <ul>
         <li><a href="./pizza.html">Pepperoni Pizza</a></li>
         <li><a href="./spicy_italian_salad.html">Spicy Italian Salad</a></li>
+        <li><a href="./best_chocolate_cake.html">Best Chocolate Cake</a></li>
     </ul>
     
 </body>
