--- a/best_chocolate_cake.html
+++ b/best_chocolate_cake.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>Best Chocolate Cake</h1>
+    <img src="./img/cake.jpg" alt="A delicious chocolate cake.">
     
 </body>
 </html>
