--- a/spicy_italian_salad.html
+++ b/spicy_italian_salad.html
@@ -10,6 +10,7 @@
 
     <h1>Spicy Italian Salad</h1>
     <img src="./img/salad.jpg">
+    <figcaption>An Italian Salad showcasing the best of Italy!</figcaption>
     
 </body>
 </html>
