--- a/pizza.html
+++ b/pizza.html
@@ -9,6 +9,7 @@
 <body>
     <h1>Pizza</h1>
     <img src="./img/pizza.jpg">
+    <figcaption>This pizza is sure to please any true pizza lover!</figcaption>
     
 </body>
 </html>
