--- a/best_chocolate_cake.html
+++ b/best_chocolate_cake.html
@@ -9,6 +9,7 @@
 <body>
     <h1>Best Chocolate Cake</h1>
     <img src="./img/cake.jpg" alt="A delicious chocolate cake.">
+    <figcaption>Chocolate, chocolate, and more chocolate please!</figcaption>
     
 </body>
 </html>
