Add ingredient list

--- a/pizza.html
+++ b/pizza.html
@@ -8,8 +8,26 @@
 </head>
 <body>
     <h1>Pizza</h1>
-    <img src="./img/pizza.jpg">
+    <img src="./img/pizza.jpg" height="500px" width="350px">
     <figcaption>This pizza is sure to please any true pizza lover!</figcaption>
+    <h2>Ingredients:</h2>
+    <ul>
+        <li> ½ (12 ounce) can Tomato Paste </li>
+
+        <li>1 teaspoon dried oregano, crushed</li>
+
+        <li>1 teaspoon dried basil, crushed</li>
+
+        <li>½ teaspoon garlic powder</li>
+
+        <li>½ teaspoon onion powder</li>
+
+        <li>½ teaspoon sugar</li>
+
+        <li>½ teaspoon salt</li>
+
+        <li>¼ teaspoon black pepper</li>
+    </ul>
     
 </body>
 </html>
