Add crust and topping ingredients to ingredients list

--- a/pizza.html
+++ b/pizza.html
@@ -27,6 +27,23 @@
         <li>½ teaspoon salt</li>
 
         <li>¼ teaspoon black pepper</li>
+
+        <li>3¼ cups all-purpose flour, or more as needed</li>
+
+        <li>2 (.25 ounce) envelopes pizza crust yeast.</li>
+
+        <li>1 tablespoon sugar</li>
+
+        <li>1½ teaspoons salt</li>
+
+        <li>1⅓ cups very warm water (120 degrees F to 130 degrees F)</li>
+
+        <li>⅓ cup oil</li>
+
+        <li>1 (6 ounce) of Pepperoni</li>
+
+        <li>1 cup shredded mozzarella cheese</li>
+        
     </ul>
     
 </body>
