Add return home feature

--- a/best_chocolate_cake.html
+++ b/best_chocolate_cake.html
@@ -10,6 +10,8 @@
     <h1>Best Chocolate Cake</h1>
     <img src="./img/cake.jpg" alt="A delicious chocolate cake.">
     <figcaption>Chocolate, chocolate, and more chocolate please!</figcaption>
+
+    <a href="./index.html">Return Home</a>
     
 </body>
 </html>
