--- a/spicy_italian_salad.html
+++ b/spicy_italian_salad.html
@@ -11,6 +11,7 @@
     <h1>Spicy Italian Salad</h1>
     <img src="./img/salad.jpg">
     <figcaption>An Italian Salad showcasing the best of Italy!</figcaption>
+    <a href="./index.html">Return Home</a>
     
 </body>
 </html>
