Resize salad image

--- a/spicy_italian_salad.html
+++ b/spicy_italian_salad.html
@@ -9,7 +9,7 @@
 <body>
 
     <h1>Spicy Italian Salad</h1>
-    <img src="./img/salad.jpg" height="600px" width="500px">
+    <img src="./img/salad.jpg" height="550" width="500">
     <figcaption>An Italian Salad showcasing the best of Italy!</figcaption>
     <h2>Ingredients:</h2>
     <ul>
