Add ingredient list and recipe steps

--- a/best_chocolate_cake.html
+++ b/best_chocolate_cake.html
@@ -10,6 +10,53 @@
     <h1>Best Chocolate Cake</h1>
     <img src="./img/cake.jpg" alt="A delicious chocolate cake.">
     <figcaption>Chocolate, chocolate, and more chocolate please!</figcaption>
+    <h2>Ingredients:</h2>
+    <ul>
+        <li>½ cup butter</li>
+
+        <li>½ cup shortening</li>
+
+        <li>1 cup water</li>
+
+        <li>¼ cup unsweetened cocoa powder</li>
+
+        <li>2 cups all-purpose flour</li>
+
+        <li>2 cups white sugar</li>
+
+        <li>½ cup milk</li>
+
+        <li>1 tablespoon distilled white vinegar</li>
+
+        <li>2 eggs</li>
+
+        <li>1 teaspoon baking soda</li>
+
+        <li>1 teaspoon vanilla extract</li>
+
+        <li>6 tablespoons butter</li>
+
+        <li>4 tablespoons milk</li>
+
+        <li>3 tablespoons unsweetened cocoa powder</li>
+
+        <li>3 cups sifted confectioners' sugar</li>
+
+        <li>1 teaspoon vanilla extract</li>
+        
+    </ul>
+
+    <h2>Steps</h2>
+    <p>This delicious cake can be made relatively easy by following the steps below.
+        Make sure to have all of your ingredients ready!
+    </p>
+
+    <ol>
+
+        <li>Bring to a boil the 1/2 cup butter or margarine, 1/2 cup shortening, water and 1/4 cup cocoa. Remove from heat and add flour, sugar, 1/2 cup milk and vinegar. Mix well. Then add: eggs, baking soda and 1 teaspoon vanilla.</li>
+        <li>Mix well until lumps are gone. Pour into greased 9 x 13 inch pan. Bake at 400 degrees F (205 degrees C) for 20 minutes or until toothpick comes out clean.</li>
+        <li>To Make Fudge Frosting: Combine in saucepan , 6 tablespoon butter or oleo, 4 tablespoons milk and cocoa. Bring to rolling boil. Remove from heat and add 3 cups confectioners' sugar and 1 teaspoon vanilla. Beat until smooth. Spread on cooled cake.</li>
+    </ol>
 
     <a href="./index.html">Return Home</a>
     
