--- a/best_chocolate_cake.html
+++ b/best_chocolate_cake.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Best Chocolate Cake</h1>
-    <img src="./img/cake.jpg" alt="A delicious chocolate cake.">
+    <img src="./img/cake.jpg" alt="A delicious chocolate cake." width="500px" height="550px">
     <figcaption>Chocolate, chocolate, and more chocolate please!</figcaption>
     <h2>Ingredients:</h2>
     <ul>
