Add main.css and link to css in each HTML file

--- a/spicy_italian_salad.html
+++ b/spicy_italian_salad.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./main.css">
     <title>Spicy Italian Salad</title>
 </head>
 <body>
 
     <h1>Spicy Italian Salad</h1>
-    <img src="./img/salad.jpg" height="550" width="500">
+    <img src="./img/salad.jpg" height="auto" width="500">
     <figcaption>An Italian Salad showcasing the best of Italy!</figcaption>
     <h2>Ingredients:</h2>
     <ul>
