--- a/index.html
+++ b/index.html
@@ -4,15 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./main.css">
     <title>Recipes Homepage</title>
 </head>
 <body>
 
     <h1>Odin Recipes</h1>
     <ul>
-        <li><a href="./pizza.html">Pepperoni Pizza</a></li>
-        <li><a href="./spicy_italian_salad.html">Spicy Italian Salad</a></li>
-        <li><a href="./best_chocolate_cake.html">Best Chocolate Cake</a></li>
+        <li class="recipeLink"><a href="./pizza.html">Pepperoni Pizza</a></li>
+        <li class="recipeLink"><a href="./spicy_italian_salad.html">Spicy Italian Salad</a></li>
+        <li class="recipeLink"><a href="./best_chocolate_cake.html">Best Chocolate Cake</a></li>
     </ul>
     
 </body>
