--- a/spicy_italian_salad.html
+++ b/spicy_italian_salad.html
@@ -60,7 +60,7 @@
       
     </ol>
 
-    <a href="./index.html">Return Home</a>
+    <a class="returnHome" href="./index.html">Return Home</a>
     
 </body>
 </html>
