--- a/pizza.html
+++ b/pizza.html
@@ -62,7 +62,7 @@
       
     </ol>
 
-    <a href="./index.html">Return Home</a>
+    <a class="returnHome" href="./index.html">Return Home</a>
     
 </body>
 </html>
